--- a/fred-and-carol/Lessons/Index.html
+++ b/fred-and-carol/Lessons/Index.html
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8"../>
+    <meta charset="utf-8" .. />
     <title>Fred And Carol - French Immersion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../styles/main.css" />
 </head>
+
 <body>
     <header>
         <img src="../images/montagne.png" />
@@ -17,57 +19,67 @@
         </nav>
     </header>
     <main>
-        <section class="banner" style="background-image: url('../images/private-lessons.jpg'); background-position: top;">
-                <h1 class="heading top">French Lessons</h1>
-        </section> 
+        <section class="banner"
+            style="background-image: url('../images/private-lessons.jpg'); background-position: top;">
+            <h1 class="heading top">French Lessons</h1>
+        </section>
         <section class="intro">
-                <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d loved to improve your language skills, know more about the region and the tradition, French lifestyle?</p>        </section>
-        <section>            
-            
+            <p>You’ve already booked your accomodation with friends or family in Morzine or nearby, but you’d loved to
+                improve your language skills, know more about the region and the tradition, French lifestyle?</p>
+        </section>
+        <section>
+
             <article class="half-section">
-                    <img class="image" src="../images/french-companion.jpg" />
+                <img class="image" src="../images/french-companion.jpg" />
                 <div class="text">
-                    
-                        <h2>French Companion</h2>
-                        <p>You’re here with your family and friends but looking for activities other than mountain sports?<p>
-                        <p><strong>I’m here to be your French Companion!</strong></p>
+
+                    <h2>French Companion</h2>
+                    <p>You’re here with your family and friends but looking for activities other than mountain sports?
                         <p>
-                            Example of what a French companion offers:
-                            <ul>
-                                <li>Refresh your grammar and improve your spontaneous conversation skills</li>
-                                <li>Useful French : Order in a bar, a restaurant, ask for information in a store… (put into practice)</li>
-                                <li>Know more about Morzine : the village, its transformation to be a ski resort</li>
-                                <li>The savoyard French food : visit of the market, the cheese cooperative, a farm…</li>
-                            </ul>   
-                        </p>
-                        <p>
-                            <ul>
-                                <li>50€ per hour</li>
-                                <li>discount for half a day (3h): 130€</li>
-                            </ul>
-                        </p>
+                            <p><strong>I’m here to be your French Companion!</strong></p>
+                            <p>
+                                Example of what a French companion offers:
+                                <ul>
+                                    <li>Refresh your grammar and improve your spontaneous conversation skills</li>
+                                    <li>Useful French : Order in a bar, a restaurant, ask for information in a store…
+                                        (put into practice)</li>
+                                    <li>Know more about Morzine : the village, its transformation to be a ski resort
+                                    </li>
+                                    <li>The savoyard French food : visit of the market, the cheese cooperative, a farm…
+                                    </li>
+                                </ul>
+                            </p>
+                            <p>
+                                <ul>
+                                    <li>50€ per hour</li>
+                                    <li>discount for half a day (3h): 130€</li>
+                                </ul>
+                            </p>
                 </div>
 
             </article>
             <article class="half-section">
                 <img class="image" src="../images/jeux-langue-francais.jpg" />
                 <div class="text">
-                        <h2>Private Lessons</h2>
-                        <p>The lessons will take place <em>at your accomodation</em>.</p>
-                        <p>They will cover speaking, listening, reading and writing skills. We will arrange together a work plan based on your strengths and weaknesses but also, mainly on your objectives.</p>
-                        <p>
-                            <ul>
-                                <li>50€/hour</li>
-                                <li>10 hours over 5 days: 450€</li>
-                            </ul>       
-                        </p>
+                    <h2>Private Lessons</h2>
+                    <p>The lessons will take place <em>at your accomodation</em>.</p>
+                    <p>They will cover speaking, listening, reading and writing skills. We will arrange together a work
+                        plan based on your strengths and weaknesses but also, mainly on your objectives.</p>
+                    <p>
+                        <ul>
+                            <li>50€/hour</li>
+                            <li>10 hours over 5 days: 450€</li>
+                        </ul>
+                    </p>
                 </div>
 
             </article>
         </section>
     </main>
     <footer>
-        <p>F&C Experience ©2019  - French immersion in the Alps - <a href="mailto:hello@fcmorzine.com" target="_self">hello@fcmorzine.com</a></p>
+        <p>F&C Experience ©2019 - French immersion in the Alps - <a href="mailto:hello@fcmorzine.com"
+                target="_self">hello@fcmorzine.com</a></p>
     </footer>
 </body>
+
 </html>
