Style portfolio page using tachyons

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://brutalist-web.design/3ceb0ca7dd718ab29616-main.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" rel="stylesheet" type="text/css"/>
 </head>
 
-<body>
-    <header>
-        <h1>Dmitri Bontoft - Portfolio</h1>
+<body class="w-100 sans-serif">
+    <header class="w-100 pa3 ph5-ns bg-lightest-blue navy">
+        <h1 class="dib f5 f4-ns fw6 mt0 mb1 link black-70">Dmitri Bontoft - Portfolio</h1>
     </header>
-    <main>
-        <section>
-            <article>
-                <h2>Mountain Bike Trails</h2>
+    <main class="w-100 bt b--black-10">
+        <section class="bg-black-0125 w-100">
+            <article class="bt b--black-10 bg-washed-blue black-70 ph3 ph5-ns pv4 pv5-ns">
+                <h1 class="mt0 f5 f3-ns">Mountain Bike Trails</h1>
                 <p>An album of mountain bike trails I like</p>
                 <a href="./mountain-bike-trails/">View</a>
             </article>
-            <article>
-                <h2>F and C Adventures </h2>
+            <article class="bt b--black-10 bg-washed-blue black-70 ph3 ph5-ns pv4 pv5-ns">
+                <h1 class="mt0 f5 f3-ns">F and C Adventures </h1>
                 <p>A website for a small language school run by my friends Fred and Carol</p>
                 <a href="./fred-and-carol/">View</a>
             </article>
