Replace catering option text in immersion quote with icon. Improve styling

--- a/fred-and-carol/Immersion/Quote.html
+++ b/fred-and-carol/Immersion/Quote.html
@@ -40,9 +40,9 @@
                     <fieldset>
                         <legend>Meals</legend>
                         <input type="radio" id="half-board" name="board" value="half" checked />
-                        <label for="half-board">Half Board</label>
+                        <label for="half-board"></label>
                         <input type="radio" id="full-board" name="board" value="full" .. />
-                        <label for="full-board">Full Board</label>
+                        <label for="full-board"></label>
                     </fieldset>
                 </section>
                 <section>
